fix(nav/brand): fix link on navbar brand

--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
@@ -15,7 +15,7 @@
 
     <a class="navbar-brand"
        title="{{ 'APP_VENDOR' | translate }} {{ 'TASKLIST_APP' | translate }}"
-       ng-href="{{ 'tasklistbase://' | uri }}#{{ (!username ? '/login' : '') }}">
+       ng-href="{{ 'tasklistbase://' | uri }}">
 <!--
        {{ 'APP_VENDOR' | translate }} {{ 'TASKLIST_APP' | translate }}
 -->
