--- a/client/client/scripts/form/directives/cam-tasklist-form.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form.html
@@ -34,7 +34,10 @@
   <div class="form-actions" ng-show="showCompleteButton()">
     <button class="btn btn-primary"
             type="submit"
-            ng-click="save()">
+            ng-click="save()"
+            ng-hide="tasklistForm.type === 'generic'"
+            tooltip-placement="top"
+            tooltip="{{ 'SAVE_HINT' | translate }}">
       {{ 'SAVE' | translate }}
     </button>
     <button class="btn btn-primary"
