--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -35,11 +35,6 @@
   <!-- # list column -->
   <section class="column tasks-list">
     <header class="cell top">
-      <!-- <button class="btn btn-link variables-search"
-              ng-click="toggleVariableSearch($event)">
-        <span class="glyphicon glyphicon-filter"></span>
-      </button> -->
-
       <div cam-sorting-choices
            tasklist-data="tasklistData"></div>
 
@@ -80,7 +75,7 @@
 
       <button ng-click="maximizeRegion($event)"
               data-region="task"
-              class="btn btn-link maximise">
+              class="btn btn-link maximize">
         <span class="glyphicon glyphicon-fullscreen"></span>
       </button>
 
