fix(history): show a proper history
related to CAM-2935

--- a/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.html
+++ b/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.html
@@ -58,7 +58,7 @@
                     <span ng-if="!subEvent.propertyIsDate">{{ subEvent.orgValue }}</span>
                   </div>
 
-                  <div class="new-value">
+                  <div class="new-value" ng-if="subEvent.newValue">
                     <span ng-if="subEvent.propertyIsDate">{{ subEvent.newValue | camDate }}</span>
                     <span ng-if="!subEvent.propertyIsDate">{{ subEvent.newValue }}</span>
                   </div>
