impr(process): align layout to other modal dialogs
Related to: CAM-3015

--- a/client/client/scripts/process/modals/cam-tasklist-process-start-modal.html
+++ b/client/client/scripts/process/modals/cam-tasklist-process-start-modal.html
@@ -93,7 +93,8 @@
 </div>
 
 <div class="modal-footer">
-  <div ng-if="!PROCESS_TO_START_SELECTED">
+  <div ng-if="!PROCESS_TO_START_SELECTED"
+       class="row row-action">
 
     <div class="col-xs-12">
       <button class="btn btn-xs btn-link"
@@ -104,7 +105,8 @@
     </div>
   </div>
 
-  <div ng-if="PROCESS_TO_START_SELECTED">
+  <div ng-if="PROCESS_TO_START_SELECTED"
+       class="row">
 
     <div class="col-xs-4 align-left">
 
