--- a/client/client/index.html
+++ b/client/client/index.html
@@ -74,6 +74,7 @@
     var tasklistConf = {};
   </script>
 
+  <script type="text/javascript" src="$APP_ROOT/app/tasklist/scripts/config.js"></script>
   <script type="text/javascript"
           src="$APP_ROOT/app/tasklist/scripts/deps.js"
           data-main="$APP_ROOT/app/tasklist/scripts/camunda-tasklist-ui"></script>
