--- a/client/client/scripts/filter/directives/cam-tasklist-filters.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filters.html
@@ -1,10 +1,17 @@
-<div ng-show="!state.$loaded"
+<div ng-show="!state.$loaded && !state.$error"
      class="loader">
   <i class="animate-spin glyphicon glyphicon-refresh"></i>
   {{ 'LOADING' | translate }}
 </div>
 
-<div ng-hide="!state.$loaded">
+<div ng-show="state.$error" class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign"></span>
+  <strong class="status">{{ 'FAILURE' | translate }}:</strong>
+  <span class="message">{{ 'FILTERS_LOADING_FAILURE' | translate }}</span>
+</div>
+
+<div ng-show="state.$loaded && !state.$error">
+
   <div ng-hide="totalItems"
        class="well">
     <i class="glyphicon glyphicon-info-sign"></i>
