chore(structure): extract list of tasks features into one folder
related to CAM-2982

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -51,7 +51,7 @@
       <div cam-task-search
            tasklist-data="tasklistData"></div>
 
-      <div cam-tasklist-filter-tasks
+      <div cam-tasks
            tasklist-data="tasklistData"></div>
     </div>
   </section>
