--- a/client/client/scripts/tasklist/directives/cam-tasklist-search.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-search.html
@@ -1,4 +1,4 @@
-<div class="task-search" ng-controller="taskSearchCtrl">
+<div class="task-search">
   <form class="search-field" ng-submit="createSearch()">
     <div class="form-container search-container">
 
@@ -24,7 +24,7 @@
               value="search.type">
           <span tooltip-placement="top"
                 tooltip="{{'VARIABLE_TYPE' | translate}}">
-            {{ varValue | queryComponent }}
+            {{ varValue | camQueryComponent }}
           </span>
         </span>:
 
@@ -35,7 +35,7 @@
               value="search.name">
           <span tooltip-placement="top"
                 tooltip="{{'PROPERTY' | translate}}">
-            {{ varValue | queryComponent }}
+            {{ varValue | camQueryComponent }}
           </span>
         </span>
 
@@ -47,7 +47,7 @@
               value="search.operator">
           <span tooltip-placement="top"
                 tooltip="{{'OPERATOR' | translate}}">
-            {{ varValue | queryComponent | translate }}
+            {{ varValue | camQueryComponent | translate }}
           </span>
         </span>
 
@@ -59,7 +59,7 @@
               flexible="true">
           <span tooltip-placement="top"
             tooltip="{{'VALUE' | translate}}">
-              {{ varValue | queryComponent }}
+              {{ varValue | camQueryComponent }}
           </span>
         </span>
       </span>
@@ -76,10 +76,6 @@
            ng-mousedown="dropdownHandler($event)">
         <ul class="dropdown-menu search-dropdown"
             role="menu">
-          <!-- <li role="presentation"
-              class="dropdown-header">
-            searching for:
-          </li> -->
 
           <li ng-repeat="type in types">
             <a ng-click="selectType(type)">
