impr(forms): enable save button only if user made changes to the form
related to CAM-2737

--- a/client/client/scripts/form/directives/cam-tasklist-form.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form.html
@@ -37,7 +37,8 @@
             ng-click="save()"
             ng-hide="tasklistForm.type === 'generic'"
             tooltip-placement="top"
-            tooltip="{{ 'SAVE_HINT' | translate }}">
+            tooltip="{{ 'SAVE_HINT' | translate }}"
+            ng-disabled="!$dirty">
       {{ 'SAVE' | translate }}
     </button>
     <button class="btn btn-primary"
