fix(forms): make the tooltip disappear when the user clicks save
related to CAM-2737

--- a/client/client/scripts/form/directives/cam-tasklist-form.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form.html
@@ -34,7 +34,7 @@
   <div class="form-actions" ng-show="showCompleteButton()">
     <button class="btn btn-primary"
             type="submit"
-            ng-click="save()"
+            ng-click="save($event)"
             ng-hide="tasklistForm.type === 'generic'"
             tooltip-placement="top"
             tooltip="{{ 'SAVE_HINT' | translate }}"
