fix(generic form): add validation for Integer variable value field
Related to: CAM-3002

--- a/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
@@ -131,6 +131,16 @@
                  cam-variable-type="{{ variable.type }}"
                  placeholder="{{ 'VARIABLE_VALUE' | translate }}" />
 
+          <input ng-switch-when="Integer"
+                 class="form-control"
+                 type="text"
+                 required
+                 ng-model="variable.value"
+                 ng-pattern="/^(-|)[0-9]+$/"
+                 cam-variable-name="{{ variable.name }}"
+                 cam-variable-type="{{ variable.type }}"
+                 placeholder="{{ 'VARIABLE_VALUE' | translate }}" />
+
 
           <input ng-switch-when="Boolean"
                  class="form-control"
