--- a/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
+++ b/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
@@ -8,67 +8,65 @@
 
   <div notifications-panel></div>
 
+  <form name="taskGroupForm"
+        class="form-horizontal"
+        ng-controller="camTaskGroupsCtrl"
+        ng-hide="!modalGroupsState.$loaded || modalGroupsState.$error"
+        ng-submit="(isValid() && addGroup())">
+
   <div ng-show="!modalGroupsState.$loaded && !modalGroupsState.$error"
        class="loader">
     <i class="animate-spin glyphicon glyphicon-refresh"></i>
     {{ 'LOADING' | translate }}
   </div>
 
-  <div ng-hide="!modalGroupsState.$loaded || modalGroupsState.$error">
+  <div class="text-help">
+    <span class="glyphicon glyphicon-info-sign"></span>
+    {{ 'USE_ADD_GROUP' | translate }}
+  </div>
 
-      <div class="text-help">
-        <span class="glyphicon glyphicon-info-sign"></span>
-        {{ 'USE_ADD_GROUP' | translate }}
+    <div class="form-group">
+      <div class="col-xs-4 align-right">
+        <button class="btn btn-link"
+                ng-click="addGroup()"
+                type="button"
+                ng-disabled="!isValid()">
+          <span class="hidden-sm hidden-xs">{{ 'GROUP_ADD' | translate }}</span>
+          <span class="glyphicon glyphicon-plus-sign"></span>
+        </button>
       </div>
 
-      <form name="taskGroupForm"
-            class="form-horizontal"
-            ng-submit="(isValid() && addGroup())">
+      <div class="col-xs-8"
+           ng-class="{'has-error': newGroup.error }">
+        <input type="text"
+               name="newGroup"
+               required
+               placeholder="{{ 'GROUP_ID' | translate }}"
+               class="form-control"
+               ng-model="newGroup.groupId"
+               ng-change="validateNewGroup()"/>
 
-        <div class="form-group">
-          <div class="col-xs-4 align-right">
-            <button class="btn btn-link"
-                    ng-click="addGroup()"
-                    type="button"
-                    ng-disabled="!isValid()">
-              <span class="hidden-sm hidden-xs">{{ 'GROUP_ADD' | translate }}</span>
-              <span class="glyphicon glyphicon-plus-sign"></span>
-            </button>
-          </div>
+        <span ng-if="newGroup.error"
+              class="help-block">
+          {{ newGroup.error.message | translate }}
+        </span>
+      </div>
+    </div>
 
-          <div class="col-xs-8"
-               ng-class="{'has-error': newGroup.error }">
-            <input type="text"
-                   name="newGroup"
-                   required
-                   placeholder="{{ 'GROUP_ID' | translate }}"
-                   class="form-control"
-                   ng-model="newGroup.groupId"
-                   ng-change="validateNewGroup()"/>
+    <div class="form-group values"
+         ng-repeat="group in _groups">
+      <div class="col-xs-4 row-action">
+        <a href
+           ng-click="removeGroup(group)"
+           class="glyphicon glyphicon-minus-sign"></a>
+      </div>
 
-            <span ng-if="newGroup.error"
-                 class="help-block">
-              {{ newGroup.error.message | translate }}
-            </span>
-          </div>
-        </div>
+      <div class="col-xs-8 value">
+        {{ group.groupId }}
+      </div>
+    </div>
 
-        <div class="form-group values"
-             ng-repeat="group in _groups">
-          <div class="col-xs-4 row-action">
-            <a href
-               ng-click="removeGroup(group)"
-               class="glyphicon glyphicon-minus-sign"></a>
-          </div>
-
-          <div class="col-xs-8 value">
-            {{ group.groupId }}
-          </div>
-        </div>
-
-      </form>
-
-  </div>
+  </form>
 
 </div>
 
