--- a/client/client/scripts/widgets/directives/cam-widget-inline-field.html
+++ b/client/client/scripts/widgets/directives/cam-widget-inline-field.html
@@ -1,61 +1,62 @@
-<span class="view-value"
-      ng-if="!editing"
+<span ng-if="!editing"
       ng-click="startEditing()"
-      ng-transclude>
+      ng-transclude
+      class="view-value">
 </span>
 
-<span class="edit"
-      ng-if="editing">
+<span ng-if="editing && (varType === 'datetime' || varType === 'date' || varType === 'time')"
+      class="preview">
+  {{ dateValue | camDate }}
+</span>
 
-  <span ng-if="varType === 'datetime' || varType === 'date' || varType === 'time'"
-        class="preview">
-    {{ dateValue | camDate }}
+<span ng-if="editing && (varType === 'option')"
+      class="option-value">
+  {{ varValue | translate }}
+</span>
+
+<span ng-if="editing"
+      class="edit">
+
+  <input ng-if="simpleField"
+         class="form-control"
+         type="{{ varType }}"
+         ng-model="editValue"
+         ng-keyup="($event.keyCode == 13 && applyChange()) || ($event.keyCode == 27 && cancelChange())"
+         placeholder="{{ placeholder }}" />
+
+  <span ng-show="varType === 'datetime' || varType === 'date' || varType === 'time'"
+        class="cam-widget-inline-field field-control">
+
+    <datepicker class="datepicker"
+                ng-if="varType === 'datetime' || varType === 'date'"
+                type="text"
+                ng-required="true"
+                is-open="datePickerOptions.isOpen"
+                show-button-bar="false"
+
+                ng-model="dateValue"
+                ng-change="changeDate(this)" />
+
+
+    <timepicker class="timepicker"
+                ng-if="varType === 'datetime' || varType === 'time'"
+                show-meridian="false"
+
+                ng-model="dateValue"
+                ng-change="changeDate(this)" />
+
   </span>
 
-  <span class="field">
-    <input ng-if="simpleField"
-           class="form-control"
-           type="{{ varType }}"
-           ng-model="editValue"
-           ng-keyup="($event.keyCode == 13 && applyChange()) || ($event.keyCode == 27 && cancelChange())"
-           placeholder="{{ placeholder }}" />
-
-    <span ng-show="varType === 'datetime' || varType === 'date' || varType === 'time'"
-          class="cam-widget-inline-field field-control">
-
-      <datepicker class="datepicker"
-                  ng-if="varType === 'datetime' || varType === 'date'"
-                  type="text"
-                  ng-required="true"
-                  is-open="datePickerOptions.isOpen"
-                  show-button-bar="false"
-
-                  ng-model="dateValue"
-                  ng-change="changeDate(this)" />
-
-
-      <timepicker class="timepicker"
-                  ng-if="varType === 'datetime' || varType === 'time'"
-                  show-meridian="false"
-
-                  ng-model="dateValue"
-                  ng-change="changeDate(this)" />
-
-    </span>
-
-    <div ng-if="varType === 'option'"
-         class="cam-widget-inline-field">
-      <span class="option-value">{{varValue | translate }}</span>
-      <ul class="dropdown-menu"
-          role="menu">
-        <li ng-repeat="option in options">
-          <a ng-click="applyChange(option)">
-            {{option | translate }}
-          </a>
-        </li>
-      </ul>
-    </div>
-  </span>
+  <div ng-show="varType === 'option'"
+       class="cam-widget-inline-field field-control">
+    <ul class="dropdown-menu">
+      <li ng-repeat="option in options">
+        <a ng-click="applyChange(option)">
+          {{option | translate }}
+        </a>
+      </li>
+    </ul>
+  </div>
 
   <span ng-show="varType !== 'option'"
         class="cam-widget-inline-field btn-group">
@@ -63,8 +64,8 @@
             class="btn btn-xs btn-default"
             ng-click="changeType()"
             ng-if="flexible">
-      <span ng-show="varType === 'text'" class="glyphicon glyphicon-calendar"></span>
-      <span ng-show="varType === 'datetime'" class="glyphicon glyphicon-pencil"></span>
+      <span class="glyphicon"
+            ng-class="'glyphicon-' + (varType === 'text' ? 'calendar' : 'pencil')"></span>
     </button>
 
     <button type="button"
