fix(generic form): replace ng-readonly with ng-disabled
This prevent changing the variable type (although the dropdown select
should be read-only).

Related to: CAM-3016

--- a/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
@@ -62,7 +62,7 @@
 
         <div class="col-xs-4">
           <select required
-                  ng-readonly="!variable.name"
+                  ng-disabled="!variable.name"
                   class="form-control"
                   placeholder="{{ 'VARIABLE_TYPE' | translate }}"
                   ng-model="variable.type">
