--- a/client/client/index.html
+++ b/client/client/index.html
@@ -18,6 +18,7 @@
         app-name="tasklist" />
 
   <link rel="stylesheet" type="text/css" href="$APP_ROOT/app/tasklist/styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="$APP_ROOT/app/tasklist/styles/user-styles.css">
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
@@ -28,6 +29,7 @@
   <link rel="apple-touch-icon" href="$APP_ROOT/app/tasklist/images/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="$APP_ROOT/app/tasklist/images/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="$APP_ROOT/app/tasklist/images/apple-touch-icon-114x114.png">
+
 </head>
 
 <body ng-class="{ 'authenticated' : (authentication && authentication.name) }">
