impr(layout): remove obsolete CSS class on body

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body ng-class="{ 'authenticated' : (authentication && authentication.name) }">
+<body>
   <div class="site-wrap"
        ng-controller="camTasklistAppCtrl">
 
