impr(task list): add tooltip on some variable values
Related to: CAM-3045

--- a/client/client/scripts/variable/directives/cam-tasklist-variables.html
+++ b/client/client/scripts/variable/directives/cam-tasklist-variables.html
@@ -23,7 +23,9 @@
               ng-if="variablesByName[info.name].value !== null || variablesByName[info.name].type === 'Bytes'"
               ng-switch="variablesByName[info.name].type">
           <span class="variable-value"
-                ng-switch-when="Date">
+                ng-switch-when="Date"
+                tooltip-placement="top"
+                tooltip="{{ variablesByName[info.name].value | camDate }}">
             {{ variablesByName[info.name].value | camDate }}
           </span>
 
@@ -46,7 +48,9 @@
           </a>
 
           <span class="variable-value"
-                ng-switch-default>
+                ng-switch-default
+                tooltip-placement="top"
+                tooltip="{{ variablesByName[info.name].value }}">
             {{ variablesByName[info.name].value }}
           </span>
         </span>
